--- a/pages/styles.css
+++ b/pages/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;700;800&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;700;800&display=swap'); */
 
 body {
     margin: 0;
@@ -35,7 +35,7 @@ body {
     gap: 64px;
 }
 
-.header {    
+.header {
     display: flex;
     flex-direction: column;
     width: 100%;
