--- a/pages/styles.css
+++ b/pages/styles.css
@@ -10,7 +10,7 @@ body {
     display: flex;
     place-content: center flex-start;
     align-items: center;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
     flex-flow: column nowrap;
     gap: 10px;
     height: 100vh;
@@ -40,7 +40,7 @@ body {
     flex-direction: column;
     width: 100%;
     align-items: center;
-    color: #FFF
+    color: rgb(7, 2, 41)
 }
 
 .header-title {
@@ -52,7 +52,7 @@ body {
     width: 100%;
     font-weight: 700;
     font-size: 72px;
-    letter-spacing: -4px;
+    /* letter-spacing: -4px; */
     line-height: 1.2em;
     text-align: center;
     margin: 0;
@@ -63,7 +63,7 @@ body {
     font-style: normal;
     font-weight: 400;
     line-height: 1.4em;
-    color: rgba(255, 255, 255, 0.75);
+    color: rgba(7, 2, 41, 0.75);
 }
 
 .prompt-container {
@@ -80,14 +80,14 @@ body {
 
 .prompt-box {
     border-bottom-width: 1px;
-    border-color: rgba(255, 255, 255, 0.1);
+    border-color: rgba(7, 2, 41, 0.1);
     border-left-width: 1px;
     border-right-width: 1px;
     border-style: solid;
     border-top-width: 1px;
     place-content: flex-start;
     align-items: flex-start;
-    background-color: rgba(255, 255, 255, 0.05);
+    background-color: rgba(7, 2, 41, 0.05);
     border-radius: 16px;
     display: flex;
     flex: 0 0 auto;
@@ -108,7 +108,7 @@ body {
     letter-spacing: 0px;
     line-height: 1.6em;
     text-align: start;
-    color: rgba(255, 255, 255, 0.75);
+    color: rgba(7, 2, 41, 0.75);
     text-decoration: none;
     text-transform: none;
 }
@@ -119,7 +119,7 @@ textarea {
 
 
 .prompt-box:focus {
-    border-color:rgba(255, 255, 255, 0.75)
+    border-color:rgba(7, 2, 41, 0.75)
 }
 
 
@@ -148,7 +148,7 @@ textarea {
 }
 
 .key-stroke p {
-    color: rgba(255, 255, 255, 0.75);
+    color: rgba(7, 2, 41, 0.75);
     flex: 0 0 auto;
     height: auto;
     position: relative;
@@ -166,7 +166,7 @@ textarea {
 }
 
 .or p {
-    color: rgba(255, 255, 255, 0.25)
+    color: rgba(7, 2, 41, 0.25)
 }
 
 .generate-button {
@@ -198,7 +198,7 @@ textarea {
 }
 
 .generate p {
-    color: rgb(255, 255, 255);
+    color: rgb(7, 2, 41);
     margin: 0;
 }
 
@@ -220,7 +220,7 @@ textarea {
 
 .badge-container a {
     border-bottom-width: 1px;
-    border-color: rgba(255, 255, 255, 0.1);
+    border-color: rgba(7, 2, 41, 0.1);
     border-left-width: 1px;
     border-right-width: 1px;
     border-style: solid;
@@ -323,7 +323,7 @@ textarea {
 .output-content p {
     text-align: center;
     white-space: pre-line;
-    color: rgba(255, 255, 255, 0.5);
+    color: rgba(7, 2, 41, 0.5);
 }
 
 @media (min-width: 810px) and (max-width: 1199px) {
@@ -412,4 +412,45 @@ textarea {
     100% {
         transform: rotate(360deg);
     }
+}
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+
+tr:nth-child(odd) {
+  background-color: #ddddddf1;
+}
+
+.button-container {
+  display: flex;
+  justify-content: space-evenly;
+  flex: 0 0 auto;
+  width: 300px;
+}
+
+.button-container2 {
+  display: flex;
+  justify-content: space-evenly;
+  flex: 0 0 auto;
+  width: 90%;
+}
+
+.button-container3 {
+  display: flex;
+  justify-content: space-evenly;
+  flex: 0 0 auto;
+  width: 90%;
 }
