--- a/pages/styles.css
+++ b/pages/styles.css
@@ -454,3 +454,59 @@ tr:nth-child(odd) {
   flex: 0 0 auto;
   width: 90%;
 }
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  flex: 0 0 auto;
+  width: 300px;
+  flex-wrap: wrap;
+  gap: 5px;
+}
+
+.button-container2 {
+  display: flex;
+  justify-content: center;
+  flex: 0 0 auto;
+  width: 50%;
+  flex-wrap: wrap;
+  gap: 5px;
+}
+
+.button-container3 {
+  display: flex;
+  justify-content: center;
+  flex: 0 0 auto;
+  width: 50%;
+  flex-wrap: wrap;
+  gap: 5px;
+}
+
+.toggle-button {
+  background: #fff;
+  color: red;
+  border: 2px solid red;
+  border-radius: 3px;
+  padding: 5px 10px;
+  text-transform: uppercase;
+}
+
+.btn-primary {
+  color: #fff;
+  background-color: #2E4C80;
+  background-color: cutom-color;
+  border-color: #2E4C80;
+  border-color: cutom-cor;
+}
+
+.color-btn {
+  background-color: #efefef !important;
+  color: #3c3b3a !important;
+  border: none !important;
+}
+
+.color-btn:checked {
+  background-color: #9b1919 !important;
+  color: #3c3b3a !important;
+  border: none !important;
+}
