--- a/pages/styles.css
+++ b/pages/styles.css
@@ -177,9 +177,23 @@ header {
   bottom: 0;
   left: 0;
   position: fixed;
+  margin-top: 80vh;
   right: 0;
   top: 0;
   z-index: 1;
+}
+
+.overlay2 {
+  z-index: 1;
+  background-color: rgba(0,0,0,0.5);
+  bottom: 0;
+  left: 0;
+  position: fixed;
+  margin-top: 70vh;
+  width: 100%;
+  height: 40%;
+  right: 0;
+  top: 0;
 }
 
 .generate-button {
@@ -214,8 +228,9 @@ header {
 }
 
 .generate p {
-    color: rgb(7, 2, 41);
+    color: rgb(255, 255, 255);
     margin: 0;
+    font-weight: 700;
 }
 
 .loading {
@@ -242,7 +257,7 @@ header {
     max-width: 1200px;
     overflow: hidden;
     position: relative;
-    width: 100%;
+    max-width: 600px;
 }
 
 .output-header-container {
@@ -256,7 +271,7 @@ header {
     overflow: hidden;
     padding: 0px;
     position: relative;
-    width: 100%;
+    max-width: 100%;
 }
 
 .output-header h3 {
@@ -383,6 +398,7 @@ header {
   flex: 0 0 auto;
   flex-wrap: wrap;
   gap: 5px;
+  max-width: 500px;
 }
 
 .divdiv {
