--- a/pages/styles.css
+++ b/pages/styles.css
@@ -440,5 +440,7 @@ header {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  /* width: 50%; */
+  max-height: 30vh;
+  max-width: 30vh;
 }
