--- a/pages/styles.css
+++ b/pages/styles.css
@@ -185,13 +185,14 @@ header {
 
 .overlay2 {
   z-index: 1;
-  background-color: rgba(0,0,0,0.5);
+  /* background-color: rgba(255, 255, 255); */
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 1));
   bottom: 0;
   left: 0;
   position: fixed;
   margin-top: 70vh;
   width: 100%;
-  height: 40%;
+  height: 30%;
   right: 0;
   top: 0;
 }
@@ -447,4 +448,8 @@ header {
 
 .no-underline {
   text-decoration: none;
+}
+
+.giphys {
+  margin: auto;
 }
